# parlin-plugins

./: .gitignore  CLAUDE.md
.claude-plugin/: marketplace.json
apple-dev/.claude-plugin/: plugin.json
apple-dev/skills/build-to-phone/: SKILL.md
apple-dev/skills/testflight/: SKILL.md
backlog-tool/: README.md  pyproject.toml
backlog-tool/.claude-plugin/: plugin.json
backlog-tool/skills/backlog/: SKILL.md
backlog-tool/src/backlog_tool/: __init__.py
deployed-artifacts/: README.md
deployed-artifacts/.claude-plugin/: plugin.json
deployed-artifacts/skills/deployed-artifacts/: SKILL.md
